# PDFit

./: .env.example  .gitignore  AGENTS.md  QA-REPORT-PHASE3.md  README.md  index.html  overview.md  package-lock.json  package.json  test-phase3.mjs  test-phase3.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  release.yml
.omo/run-continuation/: ses_19d169074ffeApD3CeKlMH5xLf.json
docs/: architecture.md  plan.md  progress.md  theme-polish-plan.md
public/: offline.html
scripts/: a11y-check.mjs  e2e-check.mjs  gen-shortcut-icons.mjs
scripts/codegraph/: README.md  build.ts  cli.ts  types.ts
src/: App.tsx  index.css  main.tsx  sw.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EmptyState.tsx  FileDropzone.tsx  FileList.tsx  Header.tsx  InstallButton.tsx  LocaleToggle.tsx  ShareToast.tsx  StoragePersistBanner.tsx  ThemeToggle.tsx  ThumbnailGrid.tsx  ToolPanel.tsx
src/contexts/: AppContext.tsx  ThemeContext.tsx
src/hooks/: useKeyboardShortcuts.ts  usePwaDeepLinks.ts  usePwaInstall.ts  useStoragePersist.ts
src/i18n/: en.ts  index.tsx  types.ts  zh.ts
src/lib/: desktop.ts  download.ts  imageToPdf.test.ts  imageToPdf.ts  liteparse.test.ts  liteparse.ts  mineru.ts  pageNumbering.test.ts  pageNumbering.ts  pdfEngine.test.ts  pdfEngine.ts  pdfToDocx.test.ts  pdfToDocx.ts  pdfToImage.ts  pdfToMarkdown.test.ts  pdfToMarkdown.ts  pdfToXlsx.test.ts  pdfToXlsx.ts  pdfWorker.ts  shareStore.ts  (+8 more)
(+15 files in other folders)
